force-app/main/default/objects/Account/fields/UoM_Business_Offering__c.field-meta.xml
<CustomField>
    <fullName>UoM_Business_Offering__c</fullName>
    <label>Business Offering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>