force-app/main/default/objects/Account/fields/UoM_Test1__c.field-meta.xml
<CustomField>
    <fullName>UoM_Test1__c</fullName>
    <label>Test1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>