force-app/main/default/objects/Account/fields/UoM_Test2__c.field-meta.xml
<CustomField>
    <fullName>UoM_Test2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test2</label>
    <type>Checkbox</type>
</CustomField>