force-app/main/default/objects/Account/fields/UoM_Test3__c.field-meta.xml
<CustomField>
    <fullName>UoM_Test3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test3</label>
    <type>Checkbox</type>
</CustomField>